src/styles/Home.css
#root {
  margin: 0 auto;
  padding: 2rem;
  background: linear-gradient(135deg, #c490fc 0%, #94b7f5 100%);
}

body {
  margin: 0;
  min-height: 100vh;
  background: linear-gradient(135deg, #c490fc 0%, #94b7f5 100%);
}

.Title {
  font-family: "Poppins", sans-serif;
  font-size: 100px;
  text-align: center;
}

#motto-fill {
  padding-top: 25px;
  font-size: 20px;
  min-height: 30px;
  text-decoration: bold;
  background: linear-gradient(135deg, #755697ff 0%, #617aa5ff 100%);
}

.mb-0 {
  text-decoration-style: dashed;
}

.span-underline {
  text-decoration: underline;
}

.wave {
  background: linear-gradient(135deg, #c490fc 0%, #94b7f5 100%);
}

.card {
  margin-left: 10px;
  width: 18rem;
  background: linear-gradient(135deg, #755697ff 0%, #617aa5ff 100%);
}

